Refactor EnumTypeObjectArchetype
The archetype exposes values(), which contains a facade for how
EnumPairs are mapped to String constants.

Distill EnumTypeObjectArchetype down to a simple record, which exposes a
valueToConstant() method -- which exposes the mapping based on the saved
BitsTypeDefinition.

JIRA: YANGTOOLS-1884
Change-Id: I9e15f7ca13b6402dfa233263ca2029c09a2f351c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>